<resources>
    <string name="app_name">EnglishContest</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_settings" translatable="false">Settings</string>
    <string name="title_about" translatable="false">ABOUT</string>
    <string name="ads_mod_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="main_activity_ads_banner_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="finding_match_ads_fullscreen_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="facebook_app_id" translatable="false">600393555058897</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb600393555058897</string>
    <string name="facebook_client_token" translatable="false">c24ef74cd46e8f32c63d3339e1be5b9c</string>
    <string name="sign_in_with_facebook">Signing in with your Facebook account</string>
    <string name="sign_in_with_google">Signing in with your Google account</string>
    <string name="sign_in_with_twitter">Signing in with your Twitter account</string>
    <string name="sign_in_process_loading" translatable="false">We are processing\nPlease waiting</string>
    <string name="default_google_client_id" translatable="false">338603681012-vldrduavbfgnivf0ggmnobvppjdmdtu2.apps.googleusercontent.com</string>
    <string name="title_activity_play_game_acivity" translatable="false">PlayGameAcivity</string>
    <string name="title_activity_experimental" translatable="false">ExperimentalActivity</string>
    <string name="login_success_notification" translatable="false">Login success</string>
    <string name="login_error_notification" translatable="false">Something wrong. Please try again later</string>
    <string name="experimental_new_game" translatable="false">New Game</string>
    <string name="experimental_friends_list" translatable="false">Friends List</string>
    <string name="experimental_leaderboard" translatable="false">Leaderboard</string>
    <string name="experimental_settings" translatable="false">Settings</string>
    <string name="experimental_about" translatable="false">About</string>
    <string name="experimental_main_big_title" translatable="false"> ENGLISH FUNNY </string>
    <string name="experimental_main_programmer_name" translatable="false"> The Lazy Programmers </string>
    <string name="experimental_settings_title_language">Language</string>
    <string name="experimental_settings_title_background_music" translatable="false">Background Music</string>
    <string name="experimental_settings_title_sound_effect" translatable="false">Sound Effects</string>
    <string name="experimental_settings_lazy_programmer" translatable="false">The Lazy Programmers</string>
    <string name="experimental_about_content" translatable="false">Một trò chơi nho nhỏ được lập trình vào thời gian rảnh. Mong các bạn đã có thời gian thú vị khi sử dụng.\n Đừng quên thi thoảng click quảng cáo cho 2 thanh niên lập trình viên có chút tiền cafe ạ.\nYêu các bạn nhiều !!!\n\n(*) Hình ảnh sử dụng được download\n từ trang freepik và icon8</string>
    <string name="experimental_settings_sys_name" translatable="false">The Dreamer Coder</string>
    <string name="experimental_settings_big_title" translatable="false">Settings</string>
    <string name="shared_preferences_key" translatable="false">com.pfiev.english.preferences</string>
    <string name="preferences_all_locale_key" translatable="false">all_locale</string>
    <string name="preferences_all_locale_values" translatable="false">en_US,vi_VN</string>
    <string name="preferences_all_locale_show_key" translatable="false">all_locale_show</string>
    <string name="preferences_all_locale_show_values">English,Vietnamese</string>
    <string name="preferences_all_locale_delimiter" translatable="false">,</string>
    <string name="preferences_locale_default" translatable="false">en_US</string>
    <string name="preferences_display_language" translatable="false">display_language</string>
    <string name="preferences_sound_status" translatable="false">sound_status</string>
    <string name="preferences_sound_status_on" translatable="false">sound_status_on</string>
    <string name="preferences_sound_status_off" translatable="false">sound_status_off</string>
    <string name="preferences_bg_music_status" translatable="false">bg_music_status</string>
    <string name="preferences_bg_music_status_on" translatable="false">bg_music_status_on</string>
    <string name="preferences_bg_music_status_off" translatable="false">bg_music_status_off</string>
    <string name="experimental_leaderboard_sys_name" translatable="false">The Forgetful Data Analysis</string>
    <string name="experimental_leaderboard_big_title" translatable="false">Leaderboard</string>
    <string name="profile_big_title" translatable="false">Profile</string>
    <string name="profile_sys_user_name" translatable="false">The Meticulous Designer</string>
    <string name="profile_change_avatar" translatable="false">Change Avatar</string>
    <string name="profile_user_name" translatable="false">User Name</string>
    <string name="profile_email" translatable="false">Email</string>
    <string name="profile_phone_number" translatable="false">Phone Number</string>
    <string name="profile_gender" translatable="false">Gender :</string>
    <string name="profile_gender_male" translatable="false">Male</string>
    <string name="profile_gender_female" translatable="false">Female</string>
    <string name="profile_save_btn" translatable="false">UPDATE</string>
    <string name="profile_log_out_btn" translatable="false">SIGN OUT</string>
    <string name="profile_log_out_intro" translatable="false">Change Account</string>
    <string name="profile_can_not_select_image_notify" translatable="false">Can not select image</string>
    <string name="profile_upload_image_success_notify" translatable="false">Upload image success</string>
    <string name="profile_update_info_success_notify" translatable="false">Update profile success</string>
    <string name="profile_update_name_exists_warning" translatable="false">Username is exists. Try another</string>
    <string name="profile_update_name_length_exceed" translatable="false">Username is only up to 20 characters long</string>
    <string name="play_detail_result" translatable="false">Right: %1$d - Times: %2$d s</string>
    <string name="no_emotion_recent_description" translatable="false">There are no recent emotions icon</string>
    <string name="result_detail_play" translatable="false">Result answer is %1$d /%2$d</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="save" translatable="false">Save</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="experimental_friends_list_sys_name" translatable="false">The Introverted Tester</string>
    <string name="experimental_friends_list_big_title" translatable="false">Settings</string>
    <string name="friend_list_friend">FRIEND</string>
    <string name="friend_list_waiting">WAITING</string>
    <string name="friend_list_block">BLOCK</string>
    <string name="friend_list_search">SEARCH</string>
    <string name="friend_list_no_user_found" translatable="false">Don\'t have any user with name</string>
    <string name="friend_list_not_enough_character" translatable="false">At least 4 character</string>
    <string name="friend_list_wait_delete" translatable="false">Please waiting delete complete before continue</string>
    <string name="friend_list_invitation_confirm_mess" translatable="false">Make friends with </string>
    <string name="friend_list_invitation_confirm_accept" translatable="false">Yes, I agree </string>
    <string name="friend_list_invitation_confirm_reject" translatable="false">No </string>
    <string name="friend_list_unfriend_confirm_mess" translatable="false">Unfriend with </string>
    <string name="friend_list_unfriend_confirm_accept" translatable="false">Yes</string>
    <string name="friend_list_unfriend_confirm_reject" translatable="false">No </string>
    <string name="friend_list_request_combat_loading" translatable="false">Send request to friend. Please wait </string>
    <string name="friend_list_request_show_exceed_intro" translatable="false">You only have maximum of 50 friends</string>
    <string name="dialog_request_combat_message" translatable="false">Want to invite you join a battle </string>
    <string name="dialog_request_combat_time_remaining" translatable="false">(Time remaining: %1$ss )</string>
    <string name="dialog_request_combat_btn_accept" translatable="false">FIGHTING</string>
    <string name="dialog_request_combat_btn_reject" translatable="false">NO</string>
    <string name="experimental_request_combat_loading_txt" translatable="false">Wait for the opponent accept. Be patient soldier</string>
    <string name="dialog_make_friend_message" translatable="false">Want to be friends with you </string>
    <string name="dialog_make_friend_btn_accept" translatable="false">YES</string>
    <string name="dialog_make_friend_btn_reject" translatable="false">NO</string>
    <string name="dialog_make_friend_btn_later" translatable="false">LATER</string>
    <string name="dialog_make_friend_exceed_max_allow" translatable="false">You can only have a maximum of 50 friends</string>
    <string name="dialog_unfriend_message" translatable="false">Are you sure you want to unfriend with </string>
    <string name="dialog_unfriend_btn_accept" translatable="false">YES</string>
    <string name="dialog_unfriend_btn_reject" translatable="false">NO</string>
    <string name="dialog_unfriend_btn_later" translatable="false">Later </string>
    <string name="toast_custom_unblock_message" translatable="false">Unblock user successful </string>
    <string name="toast_custom_block_message" translatable="false">Block user successful </string>
    <string name="toast_custom_invite_friend" translatable="false">Send invitation successful </string>
    <string name="toast_custom_accept_friend" translatable="false">You have a new friend </string>
    <string name="toast_custom_reject_friend" translatable="false">Successfully declined invitation </string>
    <string name="toast_custom_unfriend_success" translatable="false">Successfully unfriend </string>
    <string name="toast_custom_default_error_display" translatable="false">Something wrong. Please try again later</string>
    <string name="app_name_big_title" translatable="false">ENGLISH FUNNY QUIZ</string>
    <string name="app_name_intro_title" translatable="false">Have fun while playing quiz with friends</string>
    <string name="finding_match_big_title" translatable="false">NEW MATCH</string>
    <string name="finding_match_sys_name" translatable="false">The happy marketer</string>
    <string name="finding_match_bubble_intro_mess" translatable="false">Look for a new match</string>
    <string name="finding_match_bubble_intro_mess_looking" translatable="false">We are searching ...</string>
    <string name="finding_match_bubble_intro_mess_found" translatable="false">Yeah, have a match for you !!</string>
    <string name="finding_match_bubble_intro_mess_waiting_competitor" translatable="false">Waiting for your competitor</string>
    <string name="finding_match_bubble_intro_mess_wait_loading_question" translatable="false">Wait loading question</string>
    <string name="finding_match_btn_find_match" translatable="false">Let\'s Start</string>
    <string name="finding_match_btn_cancel_find_match" translatable="false">Cancel</string>
    <string name="btn_back_to_main" translatable="false">Back to main</string>
</resources>