<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_experimental_root_layout"
        tools:context=".ProfileActivity">

        <ImageButton
            android:id="@+id/profile_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_activity_back_button_mg_start"
            android:layout_marginTop="@dimen/profile_activity_back_button_mg_top"
            android:background="@drawable/ic_experimental_return_back"
            android:contentDescription="@string/btn_back_to_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_big_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_activity_big_title_mg_horizontal"
            android:layout_marginTop="@dimen/profile_activity_big_title_mg_top"
            android:background="@drawable/bg_experimental_main_big_title_layout"
            android:fontFamily="@font/mali_bold"
            android:paddingHorizontal="@dimen/profile_activity_big_title_padding_h"
            android:text="@string/profile_big_title"
            android:textAlignment="center"
            android:textColor="@color/profile_activity_big_title_color"
            android:textSize="@dimen/profile_activity_big_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_back_btn" />

        <com.pfiev.englishcontest.ui.wiget.MenuBubble
            android:id="@+id/profile_main_info_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_activity_bubble_main_mg_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_big_title"
            app:sysUserName="@string/profile_sys_user_name">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/profile_margin_content_pd_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_bubble_sys_name">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.pfiev.englishcontest.ui.wiget.RoundedAvatarImageView
                        android:id="@+id/avatarUser2"
                        android:layout_width="@dimen/profile_activity_change_avatar_img_size"
                        android:layout_height="@dimen/profile_activity_change_avatar_img_size"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bg_profile_image"
                        app:shadowEnabled="true" />

                    <TextView
                        android:id="@+id/change_avatar_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/profile_activity_change_avatar_btn_mg_top"
                        android:background="@drawable/bg_experimental_main_button"
                        android:fontFamily="@font/mali_bold"
                        android:paddingHorizontal="@dimen/profile_activity_change_avatar_btn_pd_horizontal"
                        android:text="@string/profile_change_avatar"
                        android:textColor="@color/white" />

                </LinearLayout>


                <EditText
                    android:id="@+id/editPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_back_ground"
                    android:paddingHorizontal="@dimen/profile_activity_info_field_edit_text_pd_h"
                    android:paddingVertical="@dimen/profile_activity_info_field_edit_text_pd_v"
                    android:layout_marginTop="@dimen/profile_activity_info_field_mg_top"
                    android:ems="10"
                    android:fontFamily="@font/mali_regular"
                    android:hint="@string/profile_user_name"
                    android:textColorHint="@color/profile_activity_text_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_activity_info_field_text_size" />


                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/profile_activity_info_field_edit_text_pd_h"
                    android:paddingVertical="@dimen/profile_activity_info_field_edit_text_pd_v"
                    android:layout_marginTop="@dimen/profile_activity_info_field_mg_top"
                    android:background="@drawable/edittext_back_ground"
                    android:ems="10"
                    android:fontFamily="@font/mali_regular"
                    android:hint="@string/profile_email"
                    android:textColorHint="@color/profile_activity_text_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_activity_info_field_text_size" />


                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/profile_activity_info_field_edit_text_pd_h"
                    android:paddingVertical="@dimen/profile_activity_info_field_edit_text_pd_v"
                    android:layout_marginTop="@dimen/profile_activity_info_field_mg_top"
                    android:background="@drawable/edittext_back_ground"
                    android:ems="10"
                    android:fontFamily="@font/mali_regular"
                    android:hint="@string/profile_phone_number"
                    android:textColorHint="@color/profile_activity_text_hint"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_activity_info_field_text_size" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_activity_info_field_mg_top"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/profile_activity_gender_choices_pd_horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/mali_bold"
                        android:text="@string/profile_gender"
                        android:textColor="@color/profile_activity_text" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/profile_activity_gender_choice_mg_start"
                        android:fontFamily="@font/mali_bold"
                        android:text="@string/profile_gender_male"
                        android:textColor="@color/profile_activity_text" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/profile_activity_gender_choice_mg_start"
                        android:fontFamily="@font/mali_bold"
                        android:text="@string/profile_gender_female"
                        android:textColor="@color/profile_activity_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/profile_activity_save_button_mg_vertical"
                    android:background="@drawable/bg_experimental_main_button"
                    android:fontFamily="@font/mali_bold"
                    android:paddingHorizontal="@dimen/profile_activity_save_button_pd_horizontal"
                    android:text="@string/profile_save_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/profile_activity_save_button_text" />
            </LinearLayout>
        </com.pfiev.englishcontest.ui.wiget.MenuBubble>

        <com.pfiev.englishcontest.ui.wiget.MenuBubble
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_log_out_bubble_mg_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_main_info_update"
            app:sysUserAvatarHide="true"
            >
            <TextView
                android:id="@+id/profile_log_out_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_activity_save_button_mg_vertical"
                android:text="@string/profile_log_out_intro"
                android:fontFamily="@font/mali_bold"
                android:textColor="@color/profile_activity_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/profile_log_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/profile_activity_save_button_mg_vertical"
                android:paddingHorizontal="@dimen/profile_activity_logout_button_pd_horizontal"
                android:layout_marginHorizontal="@dimen/profile_activity_logout_button_mg_horizontal"
                android:background="@drawable/bg_experimental_main_button"
                android:backgroundTint="@color/profile_activity_log_out_bg"
                android:fontFamily="@font/mali_bold"
                android:text="@string/profile_log_out_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/profile_activity_log_out_text"
                app:layout_constraintStart_toEndOf="@id/profile_log_out_intro"
                app:layout_constraintTop_toTopOf="parent"
                />
        </com.pfiev.englishcontest.ui.wiget.MenuBubble>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>