<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_make_friend_height"
    android:background="@drawable/dialog_background_basic_rounded_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <com.pfiev.englishcontest.ui.wiget.RoundedAvatarImageView
            android:id="@+id/dialog_make_friend_avatar"
            android:layout_width="@dimen/dialog_make_friend_avatar_width"
            android:layout_height="@dimen/dialog_make_friend_avatar_width"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_profile_image"
            app:shadowEnabled="true" />

        <TextView
            android:id="@+id/dialog_make_friend_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dialog_make_friend_name_margin"
            android:textColor="@color/dialog_make_friend_user_name"
            android:text="Username here"
            android:fontFamily="@font/svn_supercell_magic"
            android:textSize="@dimen/dialog_make_friend_name_text_size"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/dialog_make_friend_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_make_friend_message"
            android:fontFamily="@font/svn_supercell_magic"
            android:textSize="@dimen/dialog_make_friend_message_text_size"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/dialog_make_friend_bg"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/dialog_make_friend_accept_btn"
            android:layout_width="@dimen/dialog_make_friend_btn_width"
            android:layout_height="@dimen/dialog_make_friend_btn_height"
            android:layout_marginEnd="@dimen/dialog_make_friend_btn_margin_right"
            android:backgroundTint="@color/dialog_make_friend_btn_accept_background"
            android:clickable="true"
            android:text="@string/dialog_make_friend_btn_accept"
            android:textSize="@dimen/dialog_make_friend_btn_text_size"
            android:textColor="@color/dialog_make_friend_btn_text"
            android:fontFamily="@font/svn_supercell_magic"
            />

        <Button
            android:id="@+id/dialog_make_friend_later_btn"
            android:layout_width="@dimen/dialog_make_friend_btn_width"
            android:layout_height="@dimen/dialog_make_friend_btn_height"
            android:layout_marginEnd="@dimen/dialog_make_friend_btn_margin_right"
            android:backgroundTint="@color/dialog_make_friend_btn_later_background"
            android:clickable="true"
            android:text="@string/dialog_make_friend_btn_later"
            android:textSize="@dimen/dialog_make_friend_btn_text_size"
            android:textColor="@color/dialog_make_friend_btn_text"
            android:fontFamily="@font/svn_supercell_magic"
            />

        <Button
            android:id="@+id/dialog_make_friend_reject_btn"
            android:layout_width="@dimen/dialog_make_friend_btn_width"
            android:layout_height="@dimen/dialog_make_friend_btn_height"
            android:backgroundTint="@color/dialog_make_friend_btn_reject_background"
            android:clickable="true"
            android:text="@string/dialog_make_friend_btn_reject"
            android:textSize="@dimen/dialog_make_friend_btn_text_size"
            android:textColor="@color/dialog_make_friend_btn_text"
            android:fontFamily="@font/svn_supercell_magic"
            />
    </LinearLayout>

</LinearLayout>