<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_unfriend_height"
    android:background="@drawable/dialog_background_basic_rounded_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_unfriend_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_unfriend_message_margin_bottom"
            android:fontFamily="@font/svn_supercell_magic"
            android:gravity="center"
            android:text="@string/dialog_unfriend_message"
            android:textSize="@dimen/dialog_unfriend_message_text_size" />

        <com.pfiev.englishcontest.ui.wiget.RoundedAvatarImageView
            android:id="@+id/dialog_unfriend_avatar"
            android:layout_width="@dimen/dialog_unfriend_avatar_width"
            android:layout_height="@dimen/dialog_unfriend_avatar_width"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_profile_image"
            app:shadowEnabled="true" />

        <TextView
            android:id="@+id/dialog_unfriend_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dialog_unfriend_name_margin"
            android:fontFamily="@font/svn_supercell_magic"
            android:text="Username here"
            android:textColor="@color/dialog_unfriend_user_name"
            android:textSize="@dimen/dialog_unfriend_name_text_size"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_unfriend_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_unfriend_accept_btn"
            android:layout_width="@dimen/dialog_unfriend_btn_width"
            android:layout_height="@dimen/dialog_unfriend_btn_height"
            android:layout_marginEnd="@dimen/dialog_unfriend_btn_margin_right"
            android:backgroundTint="@color/dialog_unfriend_btn_accept_background"
            android:clickable="true"
            android:fontFamily="@font/svn_supercell_magic"
            android:text="@string/dialog_unfriend_btn_accept"
            android:textColor="@color/dialog_unfriend_btn_text"
            android:textSize="@dimen/dialog_unfriend_btn_text_size" />

        <Button
            android:id="@+id/dialog_unfriend_reject_btn"
            android:layout_width="@dimen/dialog_unfriend_btn_width"
            android:layout_height="@dimen/dialog_unfriend_btn_height"
            android:backgroundTint="@color/dialog_unfriend_btn_reject_background"
            android:clickable="true"
            android:fontFamily="@font/svn_supercell_magic"
            android:text="@string/dialog_unfriend_btn_reject"
            android:textColor="@color/dialog_unfriend_btn_text"
            android:textSize="@dimen/dialog_unfriend_btn_text_size" />
    </LinearLayout>

</LinearLayout>